# catkin_ws

./: .gitignore  Data-000000.pgr  Data-001000.pgr  Data-002000.pgr  bloom_sicktoolbox.txt
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/bag2orb/: Sync_orb.h  TatBry.h
devel/include/gps_common/: GPSFix.h  GPSStatus.h
devel/include/obdii_interface/: ObdiiState.h
devel/include/phidgets_high_speed_encoder/: EncoderDecimatedSpeed.h
devel/lib/: libphidget21.so.0.0.0
notes/: .vimrc  gh_devlog.txt  notes_20180313.txt  notes_20190506.txt  test.txt  test2.txt
src/bag2orb/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/camera1394stereo/: CMakeLists.txt  camera1394stereo_nodelet.xml  package.xml
src/ladybug3camera/: CHANGELOG.rst  CMakeLists.txt  ladybug3camera_nodelet.xml  package.xml
src/ladybug3camera/cfg/: Ladybug3Camera.cfg
src/ladybug3camera/launch/: ladybug3camera.launch  ladybug3camera_full.launch  nodelet_manager.launch  nodelet_pipeline.launch  nodelet_standalone.launch  stereo_camera_full.launch
src/ladybug3camera/src/nodes/: dev_ladybug3camera.cpp  dev_ladybug3camera.h  driver1394stereo.cpp  driver1394stereo.h  featuresstereo.cpp  featuresstereo.h  format7.h  format7stereo.cpp  ladybug3camera_node.cpp  nodelet.cpp  trigger.h  yuv.h
src/launch/: afl.launch  afl_16.launch  afl_col.launch  afl_fnl.launch  afl_imu.launch  afl_io.launch  afl_ukf.launch  afl_ukf_orig.launch
src/pgrrecorder/: CMakeLists.txt  package.xml
src/pointgrey/: CMakeLists.txt
src/ros-ladybug/: CMakeLists.txt  package.xml
(+214 files in other folders)
